# graphlet

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml  start_dask.sh
graphlet/: dblp.py  etl.py  paths.py  spark.py
tests/: __init__.py  test_dblp.py  test_etl.py  test_graphlet.py  test_paths.py  test_pydantic_spark.py  test_spark.py
tests/data/: awards.csv  comedy.csv  horror.csv
tests/graphlet/: test_spark.py
